REGRESSION (271848@main): Incorrect position of ::before { position:absolute; bottom:0} dynamically changing content https://bugs.webkit.org/show_bug.cgi?id=272479 rdar://126234450

Reviewed by Alan Baradlay.

This is similar to the earlier issue https://bugs.webkit.org/show_bug.cgi?id=272665. Here the bottom is fixed
and top is auto making it relative to the parent height.

* LayoutTests/fast/block/positioning/simple-out-of-flow-parent-relative-expected.html: Renamed from LayoutTests/fast/block/positioning/simple-out-of-flow-percent-height-expected.html.
* LayoutTests/fast/block/positioning/simple-out-of-flow-parent-relative.html: Renamed from LayoutTests/fast/block/positioning/simple-out-of-flow-percent-height.html.

Expand the test case.

* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::layoutModernLines):

Cover percent top and non-auto bottom cases too.

Canonical link: https://commits.webkit.org/277550@main